<resources>
    <string name="app_name">film</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="film_app">Film app</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="search_button">search_button</string>
    <string name="search_films">search_films</string>
    <string name="add_new_film">Add new film</string>
    <string name="your_favourite_films">Your favourite films</string>
    <string name="title">Title</string>
    <string name="year">Year</string>
    <string name="plot">Plot</string>
    <string name="genres">Genres</string>
    <string name="add_to_favorites">Add to favorites</string>
    <string name="remove_from_favorites">Remove from favorites</string>
    <string name="watched">Watched</string>
    <string name="add_to_watched">Add to watched</string>
</resources>