<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/filmTitle"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:textSize="30sp" />

        <ImageView
            android:id="@+id/filmImage"
            android:layout_width="410dp"
            android:layout_height="353dp" />

        <TextView
            android:id="@+id/fullTitleLabel"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:text="@string/title"
            android:textSize="20sp" />


        <TextView
            android:id="@+id/yearLabel"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:text="@string/year"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/plotLabel"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:text="@string/plot"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/genresLabel"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:text="@string/genres"
            android:textSize="20sp" />

        <Button
            android:id="@+id/addFilmButton"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:background="#4CAF50"
            android:text="@string/add_to_favorites"
            android:textColor="@android:color/background_light"
            android:textStyle="bold" />

        <Button
            android:id="@+id/removeFilmButton"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:background="#4CAF50"
            android:text="@string/remove_from_favorites"
            android:textColor="@android:color/background_light"
            android:textStyle="bold" />
    </LinearLayout>
</ScrollView>